# IDKGameEngine-Complete

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
SomeGame/: CMakeLists.txt
demos/flightsim/: CMakeLists.txt
demos/flightsim/src/: export.cpp  game.hpp  main.cpp
